--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,12 +3,12 @@
 @tailwind utilities;
 
 body {
-	@apply bg-neutral-900 text-white h-full w-screen overflow-hidden flex flex-col;
+	@apply bg-neutral-900 text-white h-full max-h-full w-screen overflow-hidden flex flex-col;
 }
 
 html,
 #root {
-	@apply h-full w-screen;
+	@apply h-full w-screen max-h-full;
 }
 
 @layer components {
@@ -16,7 +16,7 @@ html,
 		@apply font-bold px-3 py-2 rounded border border-zinc-200;
 	}
 	.btn {
-		@apply font-bold px-3 py-2 bg-zinc-400 border border-zinc-200 text-zinc-800 rounded;
+		@apply font-bold px-3 py-2 bg-zinc-200 border border-zinc-200 text-zinc-800 rounded;
 	}
 }
 
