--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,17 +9,18 @@ body {
 html,
 #root {
 	@apply h-full max-h-full w-screen;
+	font-family: "Open Sans", sans-serif;
 }
 
 @layer components {
 	.gbtn {
-		@apply h-14 rounded-xl border border-slate-500 px-3 py-2 font-bold text-slate-300 transition-colors hover:bg-slate-500 hover:bg-opacity-10;
+		@apply h-12 rounded border border-slate-500 px-4 py-2 text-slate-300 transition-colors hover:bg-slate-500 hover:bg-opacity-10;
 	}
 	.btn {
-		@apply h-14 rounded-xl border border-slate-700 bg-slate-700 px-3 py-2 font-bold text-white transition-colors hover:border-opacity-80 hover:bg-opacity-80;
+		@apply h-12 rounded border border-slate-700 bg-slate-700 px-4 py-2 text-white transition-colors hover:border-opacity-80 hover:bg-opacity-80;
 	}
 	.input {
-		@apply relative flex h-14 min-h-[56px] w-full items-center rounded-2xl bg-zinc-800 px-4 pr-2 shadow-xl outline-none;
+		@apply relative flex h-12 w-full items-center rounded bg-zinc-800 px-4 pr-2 shadow-xl outline-none;
 	}
 }
 
